fix(dropdown): icon alignement in navbar (#122)
* fix(dropdown): icon alignement in navbar
* Update screenshots from CI

--- a/src/theme/_navbar.dropdown.scss
+++ b/src/theme/_navbar.dropdown.scss
@@ -5,6 +5,8 @@
 
 .navbar {
 	.dropdown-toggle {
+		display: flex;
+		align-items: center;
 		text-transform: uppercase;
 	}
 
